# makerworks-backend

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLI.md  Dockerfile  LICENSE  MakerWorks-Auth.postman_collection.json  README.md  alembic.ini  create_placeholder_glb.py  docker-compose.yml  docker-entrypoint.sh  main.py  nginx.conf  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  structure.txt  update_filament_colors.sql
alembic/: env.py
alembic/data/: filaments.json
alembic/versions/: 000000000000_baseline.py  0a194fcf6893_initial_schema.py  10b36552e7e3_add_estimate_settings_table.py  15cd32aee1ed_initial_clean_schema.py  18a82e28fe74_add_glb_path_to_model_metadata.py  1d60b572d7d4_initial_schema.py  23860019ec72_add_is_active_to_filaments.py  2d3010759053_initial_schema.py  394b9814d68a_add_favorites_table.py  4213031383e0_initial_schema_with_uuids.py  48b8ac7665b4_remove_authentik_sub_from_users.py  58740083d2a0_add_filepath_to_models_table.py  599510a02e80_initial_schema_for_models.py  78984906fa0a_add_filament_fields.py  7fb50adeef79_add_filament_table.py  8259ddb9dac6_initial_schema.py  8578932d1464_add_favorites_table.py  8f6fe02bda3b_add_estimate_settings.py  9b155f49ab09_add_uploadjob.py  9f1edfe2fa84_add_model_metadata_table.py  aa6a8c7a5661_create_models_table.py  ae4abeae4727_add_avatar_url_fields.py  aec0165d1a63_add_password_column_to_users.py  b6f0f66d0991_add_webm_url_to_models.py  c32a4553e1d4_create_users_table.py  c4fdae91b7e2_sync_schema_to_models_py.py  c7d0289b53b7_update_1.py  e55496689455_initial_schema.py  ed4feb1dceb7_initial_schema.py  f2fe718c8ca1_initial_schema.py  f5d1e6c7e8b3_create_upload_dirs.py  f9b3106718a8_add_filament_table.py
app/: __init__.py  auth_service.old.py  celery_worker.py  cli.py  config.py  database.py  dependencies.py  docker-entrypoint.sh  drop_db.py  email.py  init_db.py  init_subset.py  logging_config.py  main.py  models.py  redis_client.py  schemas.py  seed_admin.py  worker.py
app/alembic/: env.py
app/blender/: render_turntable_webm.py
app/config/: settings.py
app/core/: config.py  jwt.py  security.py
app/crud/: __init__.py  users.py
app/data/: filaments.json
app/db/: __init__.py  base.py  base_class.py  database.py  session.py  startup_check.py
app/dependencies/: __init__.py  auth.py  db.py  metrics.py  redis.py
app/keys/: private.pem  public.pem
app/middleware/: cors.py
app/models/: __init__.py  audit_log.py  base.py  favorite.py  filament.py  filament_pricing.py  model3d.py  model_metadata.py  models.py  user.py
app/routes/: __init__.py  admin.py  auth.py  avatar.py  bambu_connect.py  cart.py  checkout.py  discord.py  estimate.py  estimates.py  favorites.py  filaments.py  jwks.py  metrics.py  models.py  system.py  upload.py  users.py  ws_status.py
app/schemas/: __init__.py  admin.py  auth.py  checkout.py  (+9 more)
docs/: FUTURE_API_GUIDELINES.md
scripts/: render_avatar.py  seed_filaments.py
tests/: conftest.py  test_admin_view_user_uploads.py  test_auth.py  test_auth_routes.py  test_avatar_route.py  test_estimate_service.py  test_filesystem.py  test_list_models.py  test_redis_session.py  test_system_snapshot.py  test_unlock_routes.py  test_update_profile.py
unraid/: makerworks-backend.xml
(+42 files in other folders)
